# Code-Architecture

./: README.md
.github/workflows/: test.yml
Solutions/CPP/: .gitignore  CMakeLists.txt  README.md
Solutions/CPP/LinearAlgebra/: CMakeLists.txt
Solutions/CPP/LinearAlgebra/Vector/: AbstractVector.h  CMakeLists.txt  Vector.h  Vector.hpp
Solutions/CPP/LinearAlgebra/Vector/tests/: CMakeLists.txt  test_StandardVector.cpp
Solutions/Python/: environment.yml
Solutions/Python/LinearAlgebra/Vector/: AbstractVector.py  Vector.py
Solutions/Python/LinearAlgebra/Vector/tests/: test_standardVector.py
